everything works, only potential issue would be closing the menu when focus leaves the wiget when users press the f6 key. Firefox does not seem to return focus to the element that was in focus like chrome which could cause some issues as the menu could overlap content.

--- a/menu/rovingMenu/style.css
+++ b/menu/rovingMenu/style.css
@@ -50,7 +50,7 @@ ul[role="menu"] [data-controller] {
     width: 100%;
 }
 
-[data-menu-component] {
+[data-menu-widget] {
     margin: 0;
     padding: 0;
     position: relative;
